--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="content" class="content">
         <div class="datos">
             <div class="contenedor-foto">
-               <img src="./img/2.jpg" class="imagen">
+               <img src="./img/practica.png" class="imagen">
             </div>
             <div class="form_uno">
                 <form>
@@ -39,7 +39,7 @@
                     </div>
 
                     <div>
-                        <label for="theta1">&theta;&#x0307; (Rad)</sup></label>
+                        <label for="theta1">&theta;&#x0307; Velocidad</sup></label>
                         <input type="text" id="theta1" name="theta1" >
                     </div>
 
