--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
 
                     <div>
-                        <label for="theta2">&theta;&#x0307; (Rad)</sup></label>
+                        <label for="theta2">&theta; (Rad)</sup></label>
                         <input type="text" id="theta2" name="theta2" >
                     </div>
 
