--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="form_uno">
                 <form>
                     <div>
-                    <h1>Movimiento rotacional </h1>
+                    <h1>Péndulo de Torsión </h1>
                     </div>
                     <div >
                         <label  for="m_esfera">Masa de la esfera (kg)</label>
